// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interpolate acceptance test 1`] = `
Array [
  <React.Fragment>
    Hello 
    Sébastien
  </React.Fragment>,
  <React.Fragment>
     how are you 
    <span>
      today
    </span>
  </React.Fragment>,
  <React.Fragment>
    ? Another {unprovidedValue}!
  </React.Fragment>,
]
`;

exports[`Interpolate placeholders with JSX values 1`] = `
Array [
  <React.Fragment>
    Hello 
    <b>
      Sébastien
    </b>
  </React.Fragment>,
  <React.Fragment>
     how are you 
    <span>
      today
    </span>
  </React.Fragment>,
  <React.Fragment>
    ?
  </React.Fragment>,
]
`;

exports[`Interpolate placeholders with mixed vales 1`] = `
Array [
  <React.Fragment>
    Hello 
    Sébastien
  </React.Fragment>,
  <React.Fragment>
     how are you 
    <span>
      today
    </span>
  </React.Fragment>,
  <React.Fragment>
    ?
  </React.Fragment>,
]
`;
